# Coursera_git

./: README.md
Calculator/: CMakeLists.txt  main.cpp
DataBaseClass/: CMakeLists.txt  condition_parser.h  database.cpp  database.h  date.cpp  date.h  node.cpp  node.h  res.tar  token.h
DataBaseString/: CMakeLists.txt  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.h  tests.cpp  tests.h  token.cpp
Final_project/: CMakeLists.txt  main.cpp
Final_project_2.0/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  res.tar  test_runner.cpp  test_runner.h  token.cpp
Framework/: CMakeLists.txt  Rational.h  Test_runner.h  Tests.h  test_equation.cpp  test_palindrome.cpp  test_person.cpp  test_rational..cpp  test_rational.cpp
Matrix/: main.cpp
Refactoring/: CMakeLists.txt  main.cpp  result_.cpp
Set_of_figures/: CMakeLists.txt
Template/: CMakeLists.txt  main.cpp
set_of_figures/: CMakeLists.txt  set_of_figures.cpp
tracker_task/: CMakeLists.txt  main.cpp
